2008-01-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* README: Some minor wording improvements.
	Update copyright notice to include new year.
	Add additional notes regarding deployment of the pre-compiled
	development kit.

2008-01-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Retain `.exe' file name extension, if present, in program identity
	banner displayed by `-help' and `-version' options.

	* gencat.c (progname): Delay reassignment to `*argv', with `.exe'
	extension stripped, until after parsing option arguments.

2008-01-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Support `/dev/stdin' and '/dev/stdout', specified as command line
	arguments, as case-insensitive aliases for `-', representing the
	standard input and standard output streams respectively.

	* gencat.c (msgcat): Assign from first non-option command line
	argument; replace with "-", if strcasecmp() matches "/dev/stdout".

	* mcsource.c (input): Use strcasecmp() instead of strcmp, to check for
	match to "/dev/stdin".

2008-01-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add `-help' and `-version' options for `gencat'.

	* repl/getopt.c: New file; it provides a replacement for the
	`libmingwex.a' implementation of the `getopt' object module, with...
	(getopt_long_only): New function; implement it.

	* repl/include/getopt.h: New file; it provides a replacement header
	for use with the above replacement getopt.c implementation.

	* gencat.c: Add more comments; update copyright notice for new year.
	(PROGRAM_IDENTITY): New manifest definition.
	(AUTHOR_IDENTITY, AUTHOR_ATTRIBUTION): Ditto.
	(COPYRIGHT_YEARS, COPYRIGHT_HOLDER, COPYRIGHT_NOTICE): Ditto.
	(stdarg.h, getopt.h): Include.
	(banner_printf): New static function.
	(main): Add `options' defining structure; filter `argv' through it,
	using `getopt_long_only' function.

	* include/gcmsgs.h: Update copyright notice for new year.